--- a/operators.qmd
+++ b/operators.qmd
@@ -205,7 +205,7 @@ x
 
 ## Bringing it all together
 
-We can perform simple operations with the operators covered in this chapter. For example, you work in a forestry research institute where local/common names are used to identify indigenous trees. You've been instructed by your supervisor to go collect data on one of the experiment your team is working on. The experiment needs data on the dry weights of the stem sections  of four different species. You go to the lab, measure the dry weight of the tree stems, recorded them on your recording sheet and head back to your office to fire up your computer. As a R beginner that you decide to use it as your tool of choice to see if it improves your research workflow. You load R up and input the data with the knowledge you just gained in your most recent lesson (Operators in R). You assign the values of the dry weight of each species to their respective name:
+We can perform simple operations with the operators covered in this chapter. You recently got a job at the forestry research institute and you've been assigned to a department where you work with indigenous trees. In your department, the local/common names and not scientific names are used to identify indigenous trees. You've been instructed by your supervisor to go collect data on one of the experiment your team has been working on, and its data collection time. The research your team is working on needs data on the dry weights of the stem sections  of four different species. You go to the lab, measure the dry weight of the tree stems, recorded them on your recording sheet and head back to your office to fire up your computer. As a R beginner, you quickly setup R and you want to see if it'll improves your research workflow overtime. You load R up and input the data with the knowledge you just gained in your most recent lesson (Operators in R). You assign the values of the dry weight of each species to their respective name:
 
 ::: {.callout-note}
 Trees used in this example is native to Africa.
