--- a/references.bib
+++ b/references.bib
@@ -48,6 +48,15 @@
   publisher={chapman and hall/CRC}
 }
 
+@article{isced2012international,
+  title={International standard classification of education 2011},
+  author={ISCED, UNESCO},
+  journal={UNESCO Institute for Statistics},
+  year={2012}
+}
+
+
+
 @Book{russell2022statistics,
   title     = {Statistics in Natural Resources: Applications with R},
   publisher = {Chapman and Hall/CRC},
